# gentext-app

./: Dockerfile  README.md  main.py  pyproject.toml
app/: bigram_model.py  main.py  word_embeddings.py
