[project]
name = "gentext-app"
version = "0.1.0"
description = "This is generative text app for class assignment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-lg",
    "fastapi[standard]>=0.117.1",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
    "uvicorn>=0.36.0",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
